--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/core": "^6.1.11",
     "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
     "@fullcalendar/list": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
     "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
@@ -20,6 +22,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.4.6",
     "formix": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
